ExpertSystem/Business/Parser/KnowledgeBase/RulesParser.py
# Generated from Rules.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RulesParser ( Parser ):

    grammarFileName = "Rules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'IF'", "'THEN'", "'WITH'", "'AND'", "'OR'", 
                     "'TRUE'", "'FALSE'", "'>'", "'>='", "'<'", "'<='", 
                     "'=='", "'!='", "'('", "')'", "'['", "']'", "<INVALID>", 
                     "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "WITH", "AND", "OR", "TRUE", 
                      "FALSE", "GT", "GE", "LT", "LE", "EQ", "NE", "LPAREN", 
                      "RPAREN", "LSPAREN", "RSPAREN", "DECIMAL", "IDENTIFIER", 
                      "SEMI", "COMMENT", "WS" ]

    RULE_rules_set = 0
    RULE_single_rule = 1
    RULE_condition = 2
    RULE_conclusion = 3
    RULE_left_logical_expr = 4
    RULE_function_expr = 5
    RULE_args = 6
    RULE_arg = 7
    RULE_comp_operator = 8
    RULE_right_logical_expr = 9
    RULE_r_function_expr = 10

    ruleNames =  [ "rules_set", "single_rule", "condition", "conclusion", 
                   "left_logical_expr", "function_expr", "args", "arg", 
                   "comp_operator", "right_logical_expr", "r_function_expr" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    WITH=3
    AND=4
    OR=5
    TRUE=6
    FALSE=7
    GT=8
    GE=9
    LT=10
    LE=11
    EQ=12
    NE=13
    LPAREN=14
    RPAREN=15
    LSPAREN=16
    RSPAREN=17
    DECIMAL=18
    IDENTIFIER=19
    SEMI=20
    COMMENT=21
    WS=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Rules_setContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RulesParser.EOF, 0)

        def single_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.Single_ruleContext)
            else:
                return self.getTypedRuleContext(RulesParser.Single_ruleContext,i)


        def getRuleIndex(self):
            return RulesParser.RULE_rules_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRules_set" ):
                listener.enterRules_set(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRules_set" ):
                listener.exitRules_set(self)




    def rules_set(self):

        localctx = RulesParser.Rules_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rules_set)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RulesParser.IF:
                self.state = 22
                self.single_rule()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(RulesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Single_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(RulesParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(RulesParser.ConditionContext,0)


        def THEN(self):
            return self.getToken(RulesParser.THEN, 0)

        def conclusion(self):
            return self.getTypedRuleContext(RulesParser.ConclusionContext,0)


        def SEMI(self):
            return self.getToken(RulesParser.SEMI, 0)

        def WITH(self):
            return self.getToken(RulesParser.WITH, 0)

        def DECIMAL(self):
            return self.getToken(RulesParser.DECIMAL, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_single_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_rule" ):
                listener.enterSingle_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_rule" ):
                listener.exitSingle_rule(self)




    def single_rule(self):

        localctx = RulesParser.Single_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_single_rule)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.match(RulesParser.IF)
                self.state = 31
                self.condition()
                self.state = 32
                self.match(RulesParser.THEN)
                self.state = 33
                self.conclusion()
                self.state = 34
                self.match(RulesParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.match(RulesParser.IF)
                self.state = 37
                self.condition()
                self.state = 38
                self.match(RulesParser.THEN)
                self.state = 39
                self.conclusion()
                self.state = 40
                self.match(RulesParser.WITH)
                self.state = 41
                self.match(RulesParser.DECIMAL)
                self.state = 42
                self.match(RulesParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def left_logical_expr(self):
            return self.getTypedRuleContext(RulesParser.Left_logical_exprContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = RulesParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.left_logical_expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConclusionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def right_logical_expr(self):
            return self.getTypedRuleContext(RulesParser.Right_logical_exprContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_conclusion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConclusion" ):
                listener.enterConclusion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConclusion" ):
                listener.exitConclusion(self)




    def conclusion(self):

        localctx = RulesParser.ConclusionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_conclusion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.right_logical_expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Left_logical_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RulesParser.RULE_left_logical_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ComparisonExpressionContext(Left_logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RulesParser.Left_logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_expr(self):
            return self.getTypedRuleContext(RulesParser.Function_exprContext,0)

        def LSPAREN(self):
            return self.getToken(RulesParser.LSPAREN, 0)
        def DECIMAL(self):
            return self.getToken(RulesParser.DECIMAL, 0)
        def RSPAREN(self):
            return self.getToken(RulesParser.RSPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonExpression" ):
                listener.enterComparisonExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonExpression" ):
                listener.exitComparisonExpression(self)


    class LogicalExpressionInParenContext(Left_logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RulesParser.Left_logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(RulesParser.LPAREN, 0)
        def left_logical_expr(self):
            return self.getTypedRuleContext(RulesParser.Left_logical_exprContext,0)

        def RPAREN(self):
            return self.getToken(RulesParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpressionInParen" ):
                listener.enterLogicalExpressionInParen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpressionInParen" ):
                listener.exitLogicalExpressionInParen(self)


    class LogicalExpressionAndContext(Left_logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RulesParser.Left_logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def left_logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.Left_logical_exprContext)
            else:
                return self.getTypedRuleContext(RulesParser.Left_logical_exprContext,i)

        def AND(self):
            return self.getToken(RulesParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpressionAnd" ):
                listener.enterLogicalExpressionAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpressionAnd" ):
                listener.exitLogicalExpressionAnd(self)


    class LogicalExpressionOrContext(Left_logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RulesParser.Left_logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def left_logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.Left_logical_exprContext)
            else:
                return self.getTypedRuleContext(RulesParser.Left_logical_exprContext,i)

        def OR(self):
            return self.getToken(RulesParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpressionOr" ):
                listener.enterLogicalExpressionOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpressionOr" ):
                listener.exitLogicalExpressionOr(self)



    def left_logical_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RulesParser.Left_logical_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_left_logical_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = RulesParser.ComparisonExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 51
                self.function_expr()
                pass

            elif la_ == 2:
                localctx = RulesParser.ComparisonExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 52
                self.function_expr()
                self.state = 53
                self.match(RulesParser.LSPAREN)
                self.state = 54
                self.match(RulesParser.DECIMAL)
                self.state = 55
                self.match(RulesParser.RSPAREN)
                pass

            elif la_ == 3:
                localctx = RulesParser.LogicalExpressionInParenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(RulesParser.LPAREN)
                self.state = 58
                self.left_logical_expr(0)
                self.state = 59
                self.match(RulesParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 69
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = RulesParser.LogicalExpressionAndContext(self, RulesParser.Left_logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_left_logical_expr)
                        self.state = 63
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 64
                        self.match(RulesParser.AND)
                        self.state = 65
                        self.left_logical_expr(6)
                        pass

                    elif la_ == 2:
                        localctx = RulesParser.LogicalExpressionOrContext(self, RulesParser.Left_logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_left_logical_expr)
                        self.state = 66
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 67
                        self.match(RulesParser.OR)
                        self.state = 68
                        self.left_logical_expr(5)
                        pass

             
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Function_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.IDENTIFIER)
            else:
                return self.getToken(RulesParser.IDENTIFIER, i)

        def args(self):
            return self.getTypedRuleContext(RulesParser.ArgsContext,0)


        def comp_operator(self):
            return self.getTypedRuleContext(RulesParser.Comp_operatorContext,0)


        def DECIMAL(self):
            return self.getToken(RulesParser.DECIMAL, 0)

        def TRUE(self):
            return self.getToken(RulesParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(RulesParser.FALSE, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_function_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_expr" ):
                listener.enterFunction_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_expr" ):
                listener.exitFunction_expr(self)




    def function_expr(self):

        localctx = RulesParser.Function_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_expr)
        self._la = 0 # Token type
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(RulesParser.IDENTIFIER)
                self.state = 75
                self.args()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(RulesParser.IDENTIFIER)
                self.state = 77
                self.args()
                self.state = 78
                self.comp_operator()
                self.state = 79
                self.match(RulesParser.DECIMAL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.match(RulesParser.IDENTIFIER)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.match(RulesParser.IDENTIFIER)
                self.state = 83
                self.comp_operator()
                self.state = 84
                self.match(RulesParser.DECIMAL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.match(RulesParser.IDENTIFIER)
                self.state = 87
                self.comp_operator()
                self.state = 88
                self.match(RulesParser.IDENTIFIER)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 90
                self.match(RulesParser.IDENTIFIER)
                self.state = 91
                self.args()
                self.state = 92
                self.comp_operator()
                self.state = 93
                self.match(RulesParser.IDENTIFIER)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                _la = self._input.LA(1)
                if not(_la==RulesParser.TRUE or _la==RulesParser.FALSE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self):
            return self.getTypedRuleContext(RulesParser.ArgContext,0)


        def args(self):
            return self.getTypedRuleContext(RulesParser.ArgsContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = RulesParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_args)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.arg()
                self.state = 99
                self.args()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.arg()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL(self):
            return self.getToken(RulesParser.DECIMAL, 0)

        def IDENTIFIER(self):
            return self.getToken(RulesParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)




    def arg(self):

        localctx = RulesParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(_la==RulesParser.DECIMAL or _la==RulesParser.IDENTIFIER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comp_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GT(self):
            return self.getToken(RulesParser.GT, 0)

        def GE(self):
            return self.getToken(RulesParser.GE, 0)

        def LT(self):
            return self.getToken(RulesParser.LT, 0)

        def LE(self):
            return self.getToken(RulesParser.LE, 0)

        def EQ(self):
            return self.getToken(RulesParser.EQ, 0)

        def NE(self):
            return self.getToken(RulesParser.NE, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_comp_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_operator" ):
                listener.enterComp_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp_operator" ):
                listener.exitComp_operator(self)




    def comp_operator(self):

        localctx = RulesParser.Comp_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comp_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RulesParser.GT) | (1 << RulesParser.GE) | (1 << RulesParser.LT) | (1 << RulesParser.LE) | (1 << RulesParser.EQ) | (1 << RulesParser.NE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Right_logical_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RulesParser.RULE_right_logical_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class RLogicalExpressionContext(Right_logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RulesParser.Right_logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def r_function_expr(self):
            return self.getTypedRuleContext(RulesParser.R_function_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRLogicalExpression" ):
                listener.enterRLogicalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRLogicalExpression" ):
                listener.exitRLogicalExpression(self)


    class RLogicalExpressionAndContext(Right_logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RulesParser.Right_logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def right_logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.Right_logical_exprContext)
            else:
                return self.getTypedRuleContext(RulesParser.Right_logical_exprContext,i)

        def AND(self):
            return self.getToken(RulesParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRLogicalExpressionAnd" ):
                listener.enterRLogicalExpressionAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRLogicalExpressionAnd" ):
                listener.exitRLogicalExpressionAnd(self)


    class RLogicalExpressionInParenContext(Right_logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RulesParser.Right_logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(RulesParser.LPAREN, 0)
        def right_logical_expr(self):
            return self.getTypedRuleContext(RulesParser.Right_logical_exprContext,0)

        def RPAREN(self):
            return self.getToken(RulesParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRLogicalExpressionInParen" ):
                listener.enterRLogicalExpressionInParen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRLogicalExpressionInParen" ):
                listener.exitRLogicalExpressionInParen(self)



    def right_logical_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RulesParser.Right_logical_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_right_logical_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RulesParser.LPAREN]:
                localctx = RulesParser.RLogicalExpressionInParenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 109
                self.match(RulesParser.LPAREN)
                self.state = 110
                self.right_logical_expr(0)
                self.state = 111
                self.match(RulesParser.RPAREN)
                pass
            elif token in [RulesParser.IDENTIFIER]:
                localctx = RulesParser.RLogicalExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 113
                self.r_function_expr()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RulesParser.RLogicalExpressionAndContext(self, RulesParser.Right_logical_exprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_right_logical_expr)
                    self.state = 116
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 117
                    self.match(RulesParser.AND)
                    self.state = 118
                    self.right_logical_expr(4) 
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class R_function_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(RulesParser.IDENTIFIER, 0)

        def args(self):
            return self.getTypedRuleContext(RulesParser.ArgsContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_r_function_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_function_expr" ):
                listener.enterR_function_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_function_expr" ):
                listener.exitR_function_expr(self)




    def r_function_expr(self):

        localctx = RulesParser.R_function_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_r_function_expr)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(RulesParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(RulesParser.IDENTIFIER)
                self.state = 126
                self.args()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.left_logical_expr_sempred
        self._predicates[9] = self.right_logical_expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def left_logical_expr_sempred(self, localctx:Left_logical_exprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         

    def right_logical_expr_sempred(self, localctx:Right_logical_exprContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         




